ID-5606: introdusere Redis cache (INTERNAL-COMMIT) (#298)
* Initiell opprydding og cache init

* embedded redis and tests

* Integrasjonstester

* Tester

* Korrigere tester

* Redis

* redis config

* deps

* qa, del 1

* QA, del 2

* Flytte jsonignore

* Rydde i IDPortenUser

* Timeout settings

* wip

* Splittet i to tjenester

* Logins og tester

* qa

* Bruke events

* gst

* Fjerne transactional

* qa

* deps

* jekke starter

* qa-endringer

* qa-endringer

* qa-endringer

* qa-endringer

* qa-endringer, del 3

* Test for CacheUpdater

* Endre port for redis i test

* Endre config-oppsett